[package]
name = "lantern"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
once_cell = "1.18"
notify = "6.1"
x509-parser = "0.15"
futures-util = "0.3.31"
