[package]
name = "weave_node"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
redis = { version = "0.23", features = ["tokio-comp"] }
dotenv = "0.15"

[lib]
name = "weave_node"
path = "src/lib.rs"

[[bin]]
name = "miner"
path = "src/bin/miner.rs"
